# solana-civ

./: Anchor.devnet.toml  Anchor.localnet.toml  Cargo.toml  commands.md  package.json  program.json
programs/solciv/: Cargo.toml
programs/solciv/src/: errors.rs  lib.rs
programs/solciv/src/instructions/: mint.rs
