[package]
name = "solciv"
version = "0.2.0"
description = "Solciv"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solciv"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["metadata"] }
mpl-token-metadata = "5.1.0"
